feat: animate.css prefer reduced motion fix for transition helper, vendor bundle split

--- a/index.html
+++ b/index.html
@@ -41,5 +41,5 @@
                 <i class="fa fa-spinner fa-spin"></i>
             </div>
         </div>
-    <script src="main.76556ebc.js"></script></body>
+    <script src="vendor.4d7d6392.js"></script><script src="main.e50285f0.js"></script></body>
 </html>
