feat: extract css, change mobile menu to close after navigation complete

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
             }
         </script>
-    </head>
+    <link rel="icon" href="favicon.ico"><link href="vendor.css" rel="stylesheet"><link href="main.css" rel="stylesheet"></head>
 
     <body>
         <div id="applicationHost">
@@ -41,5 +41,5 @@
                 <i class="fa fa-spinner fa-spin"></i>
             </div>
         </div>
-    <script src="vendor.4d7d6392.js"></script><script src="main.e50285f0.js"></script></body>
+    <script src="vendor.69a026b7.js"></script><script src="main.a5f75ceb.js"></script></body>
 </html>
