--- a/index.html
+++ b/index.html
@@ -1,45 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Durandal</title>
-
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-        <link
-            rel="apple-touch-startup-image"
-            href="img/ios-startup-image-landscape.png"
-            media="(orientation:landscape)"
-        />
-        <link
-            rel="apple-touch-startup-image"
-            href="img/ios-startup-image-portrait.png"
-            media="(orientation:portrait)"
-        />
-        <link rel="apple-touch-icon" href="img/icon.png" />
-
-        <script type="text/javascript">
-            if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
+<!doctype html><html><head><title>Durandal</title><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black"><meta name="format-detection" content="telephone=no"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="apple-touch-startup-image" href="img/ios-startup-image-landscape.png" media="(orientation:landscape)"><link rel="apple-touch-startup-image" href="img/ios-startup-image-portrait.png" media="(orientation:portrait)"><link rel="apple-touch-icon" href="img/icon.png"><script>if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
                 var msViewportStyle = document.createElement("style");
                 var mq = "@@-ms-viewport{width:auto!important}";
                 msViewportStyle.appendChild(document.createTextNode(mq));
                 document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
-            }
-        </script>
-    <link rel="icon" href="favicon.ico"><link href="vendor.css" rel="stylesheet"><link href="main.css" rel="stylesheet"></head>
-
-    <body>
-        <div id="applicationHost">
-            <div class="splash">
-                <div class="message">
-                    Durandal Starter Kit
-                </div>
-                <i class="fa fa-spinner fa-spin"></i>
-            </div>
-        </div>
-    <script src="vendor.58673a46.js"></script><script src="main.17a47c00.js"></script></body>
-</html>
+            }</script><link rel="icon" href="favicon.ico"><link href="vendor.css" rel="stylesheet"><link href="main.css" rel="stylesheet"></head><body><div id="applicationHost"><div class="splash"><div class="message">Durandal Starter Kit</div><i class="fa fa-spinner fa-spin"></i></div></div><script src="vendor.ffd3a41e.js"></script><script src="main.4f3d8448.js"></script></body></html>
